# Desktop-Analog-Clock

./: .gitignore  README.md  meson.build
schema/: com.github.samlane-ma.desktop-analog-clock.gschema.xml
src/: DesktopClock.plugin  desktop-analog-clock.vala  desktop-clock.py  desktop-clock.vala  meson.build
